core/static/css/base.css
.top {
    width: 100%;
}

body {
    padding-top: 110px;
}

.navbar-inverse .navbar-nav > li > a {
    color: #777;
}

@media (min-width: 768px) {
    .navbar-nav > li > a {
        padding-top: 15px;
        padding-bottom: 15px;
    }
}

.nav>li>a {
    position: relative;
    display: block;
    padding: 10px 15px;
}

#login-dp {
    min-width: 250px;
    padding: 14px 14px 0;
    overflow: hidden;
    background-color: rgba(255,255,255,.8);
}

.navbar-nav>li>.dropdown-menu {
    margin-top: 0;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

@media (min-width: 768px) {
    .navbar-right .dropdown-menu {
        right: 0;
        left: auto;
    }
}

.dropdown-menu {
    position: absolute;
    top: 160%;
    left: 0;
    z-index: 1000;
    display: none;
    float: left;
    min-width: 160px;
    padding: 5px 0;
    margin: 2px 0 0;
    font-size: 14px;
    text-align: left;
    list-style: none;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid rgba(0,0,0,.15);
    border-radius: 4px;
    box-shadow: 0 6px 12px rgba(0,0,0,.175);
}

#login-dp:hover {
    text-decoration: none;
}

#login-dp .social-buttons {
    margin: 12px 0
}

#login-dp .social-buttons a {
    width: 49%;
}

#login-dp .form-group {
    margin-bottom: 10px;
}

.btn-fb {
    color: #fff;
    background-color: #3b5998;
}

.btn-fb:hover {
    color: #fff;
    background-color: #496ebc
}


@media (max-width: 768px) {
    #login-dp {
        background-color: inherit;
        color: #fff;
    }

    #login-dp .bottom {
        background-color: inherit;
        border-top: 0 none;
    }
}

a, a:hover {
    color: #fab810;
    text-decoration: none;
    background: 0 0;
    background-image: initial;
    background-position-x: 0px;
    background-position-y: 0px;
    background-size: initial;
    background-repeat: initial ;
    background-attachment: initial;
    background-origin: initial;
    background-clip: initial;
    background-color: initial;
}

h1 {
  font-family: Helvetica, Arial, sans-serif;
  font-weight: bold;
  color: #00435f;
  margin-left: 1.5rem;
  margin-top: 2rem;
  padding-top: 1rem;
}

h2 {
    font-family: Helvetica, Arial, sans-serif;
    font-weight: bold;
}

.container-fluid {
    background: #0b92d4 repeat;
    float: left;
    position: absolute;
}

.my-navbar-text {
    cursor: pointer;
    color: white;
    padding: 0%;
    margin: 1%;
}

.navbar {
    display: flex;
    padding-left: 1rem;
    padding-bottom: 0.5rem;
    padding-right: 1rem;
    padding-top: 0.5rem;
    margin: 0;
    border-radius: 0;
}

@media (min-width: 768px) {
    .navbar-expand-md {
        flex-flow: row nowrap;
        flex-direction: row;
        flex-wrap: nowrap;
        align-items: center;
        justify-content: space-between;
    }
}

.navbar-brand {
    padding: 0;
    margin-top: 7px;
    margin-right: 0.5rem;
}

.navbar-brand img {
    max-height: 110%;
    padding-left: 7px;
    padding-bottom: 0.5rem;
}

.navbar-toggler:not(:disabled):not(.disabled) {
    cursor: pointer;
}

.btn:not(:disabled):not(.disabled) {
    cursor: pointer;
}

.form-inline {
    display: flex;
    flex-flow: row nowrap;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
}

#connect {
    background-color: #fab810;
    color: #222222;
    border-color: #fab810;
    margin-left: 10px;
    margin-top: 15px;
    margin-right: 20px;
}

#search {
    float: right;
    padding-top: 15px;
    padding-right: 30px;
    padding-bottom: 15px;
}

.btn-secondary {
    margin: 7px 5px 7px 8px;
    background-color: #808080;
    color: #FFF;
}

.btn-outline-warning {
    font-weight: 500;
    color: #fab810;
    border-color: #fab810;
}

#home:hover, #mes_asso:hover, #mes_event:hover {
    font-weight: bold;
    text-decoration: none;
    color: white;
}

#home:active, #mes_asso:active, #mes_event:active {
    color: #fab810;
}

.tag {
    color: #FFF;
    border-radius: .25em;
    text-align: center;
    padding: 0.2em 0.6em;
    font-size: 85%;
}

.waiting_tag {
    background-color: #777;
}

.pending_tag {
    background-color: #00a65a;
}

.validated_tag {
    background-color: orange;
}

.finished_tag {
    background-color: #dd4b39;
}

#events_asso {
    width: 30%;
}

#events_asso .card-header {
    margin-bottom: 0;
    border-radius: 0;
}

#events_asso .card-body {
    margin: 0;
}

#office_asso {
    width: 15%;
}

#office_asso .card-body {
    overflow-y: auto;
    height: 300px;
}

.lb-lg {
    font-size: 12px;
}

#content {
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  max-width: 42rem;
}

.alert {
    margin: 10px;
    width: -moz-fit-content;
    float: right;
}

.container {
  height: 40rem;
  position: relative;
  background-color: #ddebff;
  border-radius: .25rem;
  box-shadow: 0 10px 10px rgba(0,0,0,.25);
}

